Make starter-page buttons functional, add new pages with their designs, and update content on starter-page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Velours Menu</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
     <!--Header-->
@@ -14,25 +14,25 @@
     </div>
     <!--Categories-->
     <div id="categories">
-        <a href="" class="category">
+        <a href="pages/starters-page.html" class="category">
           <div class="image-container">
             <img src="img/index-img/Starters.jpg" alt="Starters Image">
             <span class="overlay-text">Starters</span>
           </div>
         </a>
-        <a href="" class="category">
+        <a href="pages/Mains-page.html" class="category">
           <div class="image-container">
             <img src="img/index-img/Mains.jpg" alt="Mains Image">
             <span class="overlay-text">Mains</span>
           </div>
         </a>
-        <a href="" class="category">
+        <a href="pages/Desserts-page.html" class="category">
           <div class="image-container">
             <img src="img/index-img/Desserts.jpg" alt="Desserts Image">
             <span class="overlay-text">Desserts</span>
           </div>
         </a>
-        <a href="" class="category">
+        <a href="pages/Beverages-page.html" class="category">
           <div class="image-container">
             <img src="img/index-img/Beverages.jpg" alt="Beverages Image">
             <span class="overlay-text">Beverages</span>
