Fix header issues

--- a/pages/Beverages-page.html
+++ b/pages/Beverages-page.html
@@ -24,7 +24,7 @@
     </nav>
     </div>
     <!--Menu-->
-        <h2 id="title">Mains</h2>
+        <h2 id="title">Beverages</h2>
         <div id="items">
             <div class="item">
                 <img src="../img/unloaded-image.jpg" alt="">
