Add alcoholic and non-alcoholic drink options and update menu contents

--- a/pages/Beverages-page.html
+++ b/pages/Beverages-page.html
@@ -25,37 +25,43 @@
     </div>
     <!--Menu-->
         <h2 id="title">Beverages</h2>
+        <nav id="choice">
+            <ul>
+                <li><a href="Beverages-page.html" id="click">Non-Alcoholic</a></li>
+                <li><a href="Alcoholic-beverages-page.html">Alcoholic</a></li>
+            </ul>
+        </nav>
         <div id="items">
             <div class="item">
-                <img src="../img/unloaded-image.jpg" alt="">
-                <h3>Title</h3>
-                <p>description</p>
+                <img src="../img/beverages-img/white-peach-lemonade.jpg" alt="">
+                <h3>White Peach Lemonade</h3>
+                <p>A refreshing blend of freshly squeezed white peach juice and lemon, with a light sweet and tart balance, perfect for warm summer days.</p>
                 <h4>Price: 9.99$</h4>
             </div>
             <div class="item">
-                <img src="../img/unloaded-image.jpg" alt="">
-                <h3>Title</h3>
-                <p>description</p>
+                <img src="../img/beverages-img/mint-lemonade.jpg" alt="">
+                <h3>Mint Lemonade</h3>
+                <p>Homemade lemonade with fresh mint leaves, offering a refreshing and revitalizing drink with a perfect balance of sweet and sour notes</p>
                 <h4>Price: 9.99$</h4>
             </div>
             <div class="item">
-                <img src="../img/unloaded-image.jpg" alt="">
-                <h3>Title</h3>
-                <p>description</p>
+                <img src="../img/beverages-img/watermelon-breeze.jpg" alt="">
+                <h3>Watermelon Breeze</h3>
+                <p>Fresh watermelon juice, a splash of lemon, and natural sweeteners come together in this cooling, light, and fruity beverage, perfect for a summer refreshment.</p>
                 <h4>Price: 9.99$</h4>
             </div>
             <div class="item">
+                <img src="../img/beverages-img/ginger-apple-juice.jpg" alt="">
+                <h3>Ginger Apple Juice</h3>
+                <p>Freshly squeezed apple juice combined with natural ginger, creating a refreshing drink with a spicy kick and a touch of sweetness from the apple.</p>
+                <h4>Price: 9.99$</h4>
+            </div>
+        <!--<div class="item">
                 <img src="../img/unloaded-image.jpg" alt="">
                 <h3>Title</h3>
                 <p>description</p>
                 <h4>Price: 9.99$</h4>
-            </div>
-            <div class="item">
-                <img src="../img/unloaded-image.jpg" alt="">
-                <h3>Title</h3>
-                <p>description</p>
-                <h4>Price: 9.99$</h4>
-            </div>
+            </div>-->
         </div>
     <!--Footer-->
     <div id="footer">
