--- a/pages/Desserts-page.html
+++ b/pages/Desserts-page.html
@@ -27,35 +27,41 @@
         <h2 id="title">Desserts</h2>
         <div id="items">
             <div class="item">
-                <img src="../img/unloaded-image.jpg" alt="">
-                <h3>Title</h3>
-                <p>description</p>
+                <img src="../img/desserts-img/chocolate-lava-cake.jpg" alt="">
+                <h3>Chocolate Lava Cake</h3>
+                <p>A rich and indulgent chocolate cake with a molten center that flows out when cut. Served warm with a scoop of vanilla ice cream and a drizzle of raspberry coulis. A decadent choice for chocolate lovers.</p>
                 <h4>Price: 9.99$</h4>
             </div>
             <div class="item">
-                <img src="../img/unloaded-image.jpg" alt="">
-                <h3>Title</h3>
-                <p>description</p>
+                <img src="../img/desserts-img/tiramisu.jpg" alt="">
+                <h3>Tiramisu</h3>
+                <p>A classic Italian dessert made with layers of coffee-soaked ladyfingers and mascarpone cream. Topped with a dusting of cocoa powder, it’s a perfect balance of rich, creamy, and coffee-flavored goodness.</p>
                 <h4>Price: 9.99$</h4>
             </div>
             <div class="item">
-                <img src="../img/unloaded-image.jpg" alt="">
-                <h3>Title</h3>
-                <p>description</p>
+                <img src="../img/desserts-img/pistachio-baklava.jpg" alt="">
+                <h3>Pistachio Baklava</h3>
+                <p>Flaky, golden pastry layered with crushed pistachios and soaked in fragrant honey syrup. This Turkish-inspired dessert offers a perfect mix of crunchy, sweet, and nutty flavors, perfect for those who enjoy traditional desserts.</p>
                 <h4>Price: 9.99$</h4>
             </div>
             <div class="item">
-                <img src="../img/unloaded-image.jpg" alt="">
-                <h3>Title</h3>
-                <p>description</p>
+                <img src="../img/desserts-img/lemon-meringue-tart.jpg" alt="">
+                <h3>Lemon Meringue Tart</h3>
+                <p>A zesty lemon curd filling housed in a buttery, crumbly tart shell, topped with a fluffy meringue. Light, refreshing, and tangy, it’s a perfect dessert to cleanse the palate after a savory meal.</p>
                 <h4>Price: 9.99$</h4>
             </div>
             <div class="item">
+                <img src="../img/desserts-img/crème-brûlée.jpg" alt="">
+                <h3>Crème Brûlée</h3>
+                <p>A velvety vanilla custard topped with a perfectly caramelized sugar crust. Served chilled, this French classic offers a rich, smooth texture with a satisfying crack when you break through the sugar layer.</p>
+                <h4>Price: 9.99$</h4>
+            </div>
+        <!--<div class="item">
                 <img src="../img/unloaded-image.jpg" alt="">
                 <h3>Title</h3>
                 <p>description</p>
                 <h4>Price: 9.99$</h4>
-            </div>
+            </div>-->
         </div>
     <!--Footer-->
     <div id="footer">
