--- a/pages/Mains-page.html
+++ b/pages/Mains-page.html
@@ -27,29 +27,35 @@
         <h2 id="title">Mains</h2>
         <div id="items">
             <div class="item">
-                <img src="../img/unloaded-image.jpg" alt="">
-                <h3>Title</h3>
-                <p>description</p>
+                <img src="../img/mains-img/grilled-beef-tenderloin.jpg" alt="">
+                <h3>Grilled Beef Tenderloin</h3>
+                <p>Tender and flavorful beef tenderloin, marinated with a special blend of spices, is grilled over charcoal to perfection. It is served with freshly made mashed potatoes and seasonal vegetables. The rich flavor of the meat is enhanced by the smoky aroma of the grill.</p>
                 <h4>Price: 9.99$</h4>
             </div>
             <div class="item">
-                <img src="../img/unloaded-image.jpg" alt="">
-                <h3>Title</h3>
-                <p>description</p>
+                <img src="../img/mains-img/baked-sea-bass-fillet.jpg" alt="">
+                <h3>Baked Sea Bass Fillet</h3>
+                <p>Lightly seasoned with salt, olive oil, and lemon, the sea bass fillet is baked until golden and crispy. It is served with sautéed asparagus, fresh herbs, and a lemon olive oil dressing. A refreshing and flavorful choice.</p>
                 <h4>Price: 9.99$</h4>
             </div>
             <div class="item">
-                <img src="../img/unloaded-image.jpg" alt="">
-                <h3>Title</h3>
-                <p>description</p>
+                <img src="../img/mains-img/cooked-lamb-shank.jpg" alt="">
+                <h3>Cooked Lamb Shank</h3>
+                <p>The lamb shank is slowly braised at low temperatures for hours, resulting in incredibly tender and flavorful meat. It is served with a vegetable and herb mixture cooked in wine, accompanied by olive oil rice and a rocket salad. A perfect balance of savory flavors.</p>
                 <h4>Price: 9.99$</h4>
             </div>
             <div class="item">
+                <img src="../img/mains-img/vegetarian-risotto.jpg" alt="">
+                <h3>Vegetarian Risotto</h3>
+                <p>The risotto is made creamy with fresh vegetables, olive oil, and Parmesan cheese. Prepared with seasonal vegetables such as spinach, mushrooms, and artichokes, this risotto is both delicious and light, offering a satisfying vegetarian option.</p>
+                <h4>Price: 9.99$</h4>
+            </div>
+        <!--<div class="item">
                 <img src="../img/unloaded-image.jpg" alt="">
                 <h3>Title</h3>
                 <p>description</p>
                 <h4>Price: 9.99$</h4>
-            </div>
+            </div>-->
         </div>
     <!--Footer-->
     <div id="footer">
