--- a/pages/starters-page.html
+++ b/pages/starters-page.html
@@ -50,6 +50,12 @@
             <p>Inspired by Cretan cuisine, these crispy fritters are made with finely chopped zucchini and dill, served with a side of creamy yogurt dip. Perfectly crunchy and refreshing.</p>
             <h4>Price: 9.99$</h4>
         </div>
+    <!--<div class="item">
+            <img src="../img/unloaded-image.jpg" alt="">
+            <h3>Title</h3>
+            <p>description</p>
+            <h4>Price: 9.99$</h4>
+        </div>-->
     </div>
     <!--Footer-->
     <div id="footer">
